// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Closed dropdown 1`] = `
<div
  className="SpreadsheetGridDropdown"
>
  <span
    onClick={[Function]}
  >
    Header
  </span>
  <div
    className="SpreadsheetGridDropdown__body"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <span>
      Body
    </span>
  </div>
</div>
`;

exports[`Opened dropdown 1`] = `
<div
  className="SpreadsheetGridDropdown"
>
  <span
    onClick={[Function]}
  >
    Header
  </span>
  <div
    className="SpreadsheetGridDropdown__body"
    style={
      Object {
        "display": "block",
      }
    }
  >
    <span>
      Body
    </span>
  </div>
</div>
`;
